--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-title: "Pintereso Free Jekyll Theme"
+title: "Home"
 layout: default
-description: "A great collection of free and premium themes and templates."
+description: ""
 ---
 
 <section class="mt-4 mb-5">
